[package]
name = "loopah"
version = "0.1.0"
edition = "2024"

[dependencies]
# UI
eframe = "0.32"
egui = "0.32"
egui_plot = "0.33"

# Native file dialogs
rfd = "0.15"

# Decode audio (AAC/M4A/MP4, MP3, WAV, FLAC optional)
symphonia = { version = "0.5", features = [
    "aac",
    "isomp4",
    "mp3",
    "wav",
    "flac",
] }

# Low-level audio output
cpal = "0.15"

# Pitch-preserving time-stretch (MIT; builds C++ lib automatically)
ssstretch = "0.1"

# Ergonomic error handling + persistence
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
